--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     <span class="status">Loading...</span>
     <script>
         (function(){
-            var benchmark = new window.CanvasBenchmark();
+            var CanvasBenchmark = window.CanvasBenchmark;
+
+            var benchmark = new CanvasBenchmark();
 
             var stat = document.body.querySelector('.status');
 
-            benchmark.once('ready', function() {
+            stat.innerHTML = "Running benchmark...";
 
-                stat.innerHTML = "Running benchmark...";
+            benchmark.test();
 
-                benchmark.test();
-            });
-            benchmark.once('result', function(result) {
+            benchmark.once(CanvasBenchmark.EVENTS.FINISH, function(result) {
 
                 var interpr = 'Score: ' + Math.round(result * 1000) + '<br>';
                 if (result < 0.2) {
