--- a/index.html
+++ b/index.html
@@ -3,26 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Canvas benchmark test</title>
-    <script src='./dist/benchmark.js'></script>
-    <script id="vertex" type="x-shader">
-        attribute vec2 aVertexPosition;
-
-        void main() {
-            gl_Position = vec4(aVertexPosition, 0.0, 1.0);
-        }
-    </script>
-
-    <script id="fragment" type="x-shader">
-        #ifdef GL_ES
-        precision highp float;
-        #endif
-
-        uniform vec4 uColor;
-
-        void main() {
-            gl_FragColor = uColor;
-        }
-    </script>
+    <script src='./build/benchmark.js'></script>
     <style type="text/css">
         body {
             background-color: #0e0e0e;
