Take out control of tests to main controller. Fix two d tests not running. Fix watcher not detecting all changes.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
 
             stat.innerHTML = "Running benchmark..."; // TODO rotating loader
 
-            benchmark.start(0);
-
             benchmark.once(CanvasBenchmark.EVENTS.FINISH, function(result) {
 
                 var interpr = 'Score: ' + Math.round(result * 1000) + '<br>';
@@ -49,12 +47,17 @@
                     interpr += ' &#9733; &#9733; &#9733; &#9733; &#9733;';
                 }
                 stat.innerHTML = interpr;
-                console.log(interpr);
             });
 
+//          benchmark.start(5);
+
+//          ОR
+
+            benchmark.start(0);
             setTimeout(function() {
                 benchmark.stop();
             }, 3000);
+
         }());
     </script>
 </body>
